<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.firstforms.SecondInitialFormActivity"
    android:background="@drawable/gradient_background_01">


    <View
        android:id="@+id/view"
        android:layout_width="900dp"
        android:layout_height="250dp"
        android:layout_marginStart="-250dp"
        android:background="@drawable/ui_curve_02"
        android:backgroundTint="@color/secondary"
        android:rotation="-180"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-64dp"
        android:fontFamily="@font/malmnormal"
        android:text="@string/forms_fields1_secondform"
        android:textColor="@color/white_secondary"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/malmnormal"
        android:text="@string/forms_fields2_secondform"
        android:textColor="@color/white_secondary"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/malmwidebold"
        android:text="@string/forms_title_secondform"
        android:textSize="25sp"
        android:textColor="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/malmwidebold"
        android:justificationMode="inter_word"
        android:text="@string/forms_title2_secondform"
        android:textColor="@color/white_secondary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_nextform_01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/secondary"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxStrokeColor="@color/secondary"
        app:boxStrokeWidth="2dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_user_name"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/malmnormal"
            android:hint="@string/forms_hint01_secondform"
            android:maxLength="15"
            android:maxLines="1"
            android:textColor="@color/white_secondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColorHint="@color/secondary"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxStrokeColor="@color/secondary"
        app:boxStrokeWidth="2dp"
        app:counterEnabled="true"
        app:counterMaxLength="2"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_user_age"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/malmnormal"
            android:hint="@string/forms_hint02_secondform"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1"
            android:textColor="@color/white_secondary" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_nextform_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="-64dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/ic_ui_button"
        android:fontFamily="@font/malmnormalbold"
        android:paddingHorizontal="90dp"
        android:paddingVertical="15dp"
        android:text="@string/btn_continue"
        android:textColor="@color/primary"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/malmwidebold"
        android:justificationMode="inter_word"
        android:text="2   /   3"
        android:textColor="@color/white_secondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>