<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.firstforms.ThirdInitialFormActivity"
    android:background="@drawable/gradient_background_01">

    <View
        android:alpha="0.6"
        android:layout_width="900dp"
        android:layout_height="400dp"
        android:layout_marginStart="-250dp"
        android:background="@drawable/ui_curve_02"
        android:backgroundTint="@color/secondary"
        android:rotation="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/malmnormal"
        android:text="@string/forms_fields1_thirdform"
        android:textColor="@color/white_secondary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienvenida2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/malmnormal"
        android:text="@string/forms_fields2_thirdform"
        android:textColor="@color/white_secondary"
        android:textSize="20sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxStrokeColor="@color/secondary"
        app:boxStrokeWidth="2dp"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ingresoMensual"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:fontFamily="@font/malmnormal"
            android:hint="@string/forms_hint01_thirdform"
            android:maxLength="12"
            android:textColor="@color/white_secondary"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="143dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/textInputLayout2"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxStrokeColor="@color/secondary"
        app:boxStrokeWidth="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <AutoCompleteTextView
            android:id="@+id/actv_ingresos_mode"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/malmnormal"
            android:hint="@string/forms_hint02_thirdform"
            android:inputType="none"
            android:padding="10dp"
            android:textColor="@color/secondary"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/gasto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/malmnormal"
        android:text="@string/forms_fields3_thirdform"
        android:textColor="@color/white_secondary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout2" />


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxStrokeColor="@color/secondary"
        app:boxStrokeWidth="2dp"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gasto1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gastoMensual"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/malmnormal"
            android:hint="@string/forms_hint02_thirdform"
            android:inputType="numberDecimal"
            android:maxLength="12"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="143dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/gasto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/malmnormal"
        android:text="@string/forms_fields4_thirdform"
        android:textColor="@color/white_secondary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout3" />

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/textInputLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxStrokeColor="@color/secondary"
        app:boxStrokeWidth="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gasto2">

        <AutoCompleteTextView
            android:id="@+id/actv_gastos_mode"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/malmnormal"
            android:hint="@string/forms_hint02_thirdform"
            android:inputType="none"
            android:padding="10dp"
            android:textColor="@color/secondary"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/bienvenida2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/malmwidebold"
        android:text="@string/forms_title1_thirdform"
        android:textAllCaps="true"
        android:textColor="@color/secondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_nextform_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="-64dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/ic_ui_button"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/malmnormalbold"
        android:paddingHorizontal="90dp"
        android:paddingVertical="15dp"
        android:text="@string/btn_continue"
        android:textColor="@color/secondary"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />




</androidx.constraintlayout.widget.ConstraintLayout>